Finished up error 500 page
Finished up route for the error 500 page.

Fix issue with route.

--- a/public/500.html
+++ b/public/500.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>Error 500</title>
 <head/>
  <body>
-   Somthing went wrong here!
+   Something went wrong here!
  </body>
 </html>
